JumpScript/tests/baselines/reference/missingTypeArguments2.errors.txt
tests/cases/compiler/missingTypeArguments2.jump(3,14): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
tests/cases/compiler/missingTypeArguments2.jump(4,5): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
tests/cases/compiler/missingTypeArguments2.jump(5,10): error TS2314: Generic type 'A<T>' requires 1 type argument(s).
tests/cases/compiler/missingTypeArguments2.jump(6,5): error TS2314: Generic type 'A<T>' requires 1 type argument(s).


==== tests/cases/compiler/missingTypeArguments2.jump (4 errors) ====
    class A<T> { }
    
    var x: () => A;
                 ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    (a: A) => { };
        ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    var y: A<A>;
             ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
    (): A => null;
        ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).